# Qt6-Demo-Wasm-RemoteObjects-WebSocket

./: .gitignore  CMakeLists.txt  CNAME  CustomType.hpp  Demo.html  Demo.js  QWebSocketIODevice.hpp  common_rep.rep  main.cpp
.github/workflows/: build-panel.yml
replica/: Window.cpp  Window.hpp  Window.ui
source/: Window.cpp  Window.hpp  Window.ui
